package io.pedrini.expsplit.domain.transaction.model;

public enum Category {
    FOOD,
    TRANSPORT,
    ACCOMMODATION,
    ENTERTAINMENT,
    UTILITIES,
    OTHER
}
